--- a/code/Train_LR.ipynb
+++ b/code/Train_LR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -14,52 +14,70 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading collection 'popular'\n",
       "[nltk_data]    | \n",
-      "[nltk_data]    | Downloading package cmudict to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package cmudict to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/cmudict.zip.\n",
-      "[nltk_data]    | Downloading package gazetteers to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package gazetteers to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/gazetteers.zip.\n",
-      "[nltk_data]    | Downloading package genesis to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package genesis to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/genesis.zip.\n",
-      "[nltk_data]    | Downloading package gutenberg to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package gutenberg to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/gutenberg.zip.\n",
-      "[nltk_data]    | Downloading package inaugural to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package inaugural to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/inaugural.zip.\n",
       "[nltk_data]    | Downloading package movie_reviews to\n",
-      "[nltk_data]    |     /root/nltk_data...\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/movie_reviews.zip.\n",
-      "[nltk_data]    | Downloading package names to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package names to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/names.zip.\n",
-      "[nltk_data]    | Downloading package shakespeare to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package shakespeare to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/shakespeare.zip.\n",
-      "[nltk_data]    | Downloading package stopwords to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package stopwords to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/stopwords.zip.\n",
-      "[nltk_data]    | Downloading package treebank to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package treebank to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/treebank.zip.\n",
       "[nltk_data]    | Downloading package twitter_samples to\n",
-      "[nltk_data]    |     /root/nltk_data...\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/twitter_samples.zip.\n",
-      "[nltk_data]    | Downloading package omw to /root/nltk_data...\n",
-      "[nltk_data]    |   Unzipping corpora/omw.zip.\n",
-      "[nltk_data]    | Downloading package wordnet to /root/nltk_data...\n",
-      "[nltk_data]    |   Unzipping corpora/wordnet.zip.\n",
-      "[nltk_data]    | Downloading package wordnet_ic to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package omw to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    | Downloading package omw-1.4 to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet2021 to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet31 to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    | Downloading package wordnet_ic to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/wordnet_ic.zip.\n",
-      "[nltk_data]    | Downloading package words to /root/nltk_data...\n",
+      "[nltk_data]    | Downloading package words to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping corpora/words.zip.\n",
       "[nltk_data]    | Downloading package maxent_ne_chunker to\n",
-      "[nltk_data]    |     /root/nltk_data...\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping chunkers/maxent_ne_chunker.zip.\n",
-      "[nltk_data]    | Downloading package punkt to /root/nltk_data...\n",
-      "[nltk_data]    |   Unzipping tokenizers/punkt.zip.\n",
+      "[nltk_data]    | Downloading package punkt to\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
+      "[nltk_data]    |   Package punkt is already up-to-date!\n",
       "[nltk_data]    | Downloading package snowball_data to\n",
-      "[nltk_data]    |     /root/nltk_data...\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    | Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]    |     /root/nltk_data...\n",
+      "[nltk_data]    |     /Users/pranavmittal/nltk_data...\n",
       "[nltk_data]    |   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
       "[nltk_data]    | \n",
       "[nltk_data]  Done downloading collection popular\n"
@@ -67,6 +85,8 @@
     }
    ],
    "source": [
+    "# Train Logistic Regression Model\n",
+    "# Import libraries\n",
     "import nltk\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -92,7 +112,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./final1440_aapl.csv')"
+    "# read csv\n",
+    "dataFrame = pd.read_csv('./final1440_aapl.csv')"
    ]
   },
   {
@@ -255,7 +276,8 @@
     }
    ],
    "source": [
-    "df"
+    "# display dataframe\n",
+    "dataFrame"
    ]
   },
   {
@@ -268,33 +290,36 @@
    },
    "outputs": [],
    "source": [
-    "# train with text and sentiment\n",
-    "text = df['text']\n",
-    "sent = df['sentiment']\n",
-    "labels = df['label']\n",
+    "# create dataframe and extract text and sentiment\n",
+    "df_text = df['text']\n",
+    "df_sentiment = df['sentiment']\n",
+    "df_label_score = df['label']\n",
     "\n",
-    "# generate ngrams = 2,2 or 2,3 with Count Vectorizer\n",
-    "count_vectorizer = CountVectorizer(max_df=0.8, min_df=0.02, stop_words=stop_words, ngram_range=(2,2))\n",
-    "X = count_vectorizer.fit_transform(text)\n",
+    "# Using CountVectorizer to generate ngrams\n",
+    "# generate ngrams for 2,2\n",
+    "cv_ngram = CountVectorizer(max_df=0.8, min_df=0.02, stop_words=stop_words, ngram_range=(2,2))\n",
+    "X_count = cv_ngram.fit_transform(df_text)\n",
     "\n",
-    "# use TfIdf to determine freq\n",
-    "tfidf = TfidfTransformer(smooth_idf=True, use_idf=True)\n",
-    "X = tfidf.fit_transform(X).toarray()\n",
+    "# TfIdf transform to determine freqency\n",
+    "# add smoothing to avoid zero\n",
+    "tfTransform = TfidfTransformer(smooth_idf=True, use_idf=True)\n",
+    "X_count = tfTransform.fit_transform(X_count).toarray()\n",
     "\n",
-    "# use PCA to generate final text dataset\n",
-    "pca = PCA(n_components=3)\n",
-    "pca_comp = pca.fit_transform(X)\n",
+    "# pca dataset for ngrams and sentiment\n",
     "\n",
-    "# join text and sentiment\n",
-    "finalXtrain = np.hstack((pca_comp, np.atleast_2d(sent).T))\n",
+    "pca_data = PCA(n_components=3)\n",
+    "pcaComponent = pca_data.fit_transform(X_count)\n",
     "\n",
-    "# create train and test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(finalXtrain, labels, test_size=0.3, random_state=23)\n",
+    "# combining pca and sentiment\n",
+    "lastXTraining = np.hstack((pcaComponent, np.atleast_2d(df_sentiment).T))\n",
     "\n",
-    "# scale the data\n",
-    "minmaxScaler = preprocessing.MinMaxScaler()\n",
-    "scaled_x_train = minmaxScaler.fit_transform(X_train)\n",
-    "scaled_x_test = minmaxScaler.fit_transform(X_test)"
+    "# train and test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(lastXTraining, df_label_score, test_size=0.3, random_state=23)\n",
+    "\n",
+    "# minMax scale the data\n",
+    "minMaxPreprocess = preprocessing.MinMaxScaler()\n",
+    "min_max_x_train = minMaxPreprocess.fit_transform(X_train)\n",
+    "min_max_x_test = minMaxPreprocess.fit_transform(X_test)"
    ]
   },
   {
@@ -330,29 +355,29 @@
     }
    ],
    "source": [
-    "# evaluation for ngrams and sentiment\n",
+    "# evaluation\n",
     "\n",
-    "# create and train LR model\n",
-    "lr_model = LogisticRegression(random_state=10)\n",
-    "lr_model.fit(scaled_x_train,y_train)\n",
+    "# logistic regression model\n",
+    "logistic_regression_model = LogisticRegression(random_state=10)\n",
+    "logistic_regression_model.fit(min_max_x_train,y_train)\n",
     "\n",
-    "# generate prediction\n",
-    "y_train_pred = lr_model.predict(scaled_x_train)\n",
-    "y_test_pred = lr_model.predict(scaled_x_test)\n",
+    "# train and test prediction\n",
+    "Y_train_prediction = logistic_regression_model.predict(min_max_x_train)\n",
+    "Y_test_prediction = logistic_regression_model.predict(min_max_x_test)\n",
     "\n",
-    "# display train and test accuracy\n",
-    "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "print('Training accuracy is {0}'.format(train_accuracy))\n",
-    "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "print('Testing accuracy is {0}'.format(test_accuracy))\n",
+    "# print train and test accuracy\n",
+    "trainingAccuracy_Score = accuracy_score(y_train, Y_train_prediction)\n",
+    "print('Accuracy on training data is: {0}'.format(trainingAccuracy_Score))\n",
+    "testAccuracy_Score = accuracy_score(y_test, Y_test_prediction)\n",
+    "print('Accuracy on test data is: {0}'.format(testAccuracy_Score))\n",
     "\n",
-    "# display f-1 score\n",
-    "f1score = f1_score(y_test, y_test_pred)\n",
-    "print('F1 score is {0}'.format(f1score))\n",
+    "# print f-1 score\n",
+    "f1_score_pred = f1_score(y_test, Y_test_prediction)\n",
+    "print('Score for f-1 score: {0}'.format(f1_score_pred))\n",
     "\n",
-    "# display classification report\n",
-    "report = classification_report(y_test, y_test_pred)\n",
-    "print('Classifcation report: {0}'.format(report))"
+    "# print classification report\n",
+    "classify_report = classification_report(y_test, Y_test_prediction)\n",
+    "print('Report for classification: {0}'.format(classify_report))"
    ]
   },
   {
@@ -366,28 +391,30 @@
    "outputs": [],
    "source": [
     "# train with ngrams\n",
-    "text = df['text']\n",
-    "labels = df['label']\n",
+    "df_text = df['text']\n",
+    "df_label_score = df['label']\n",
     "\n",
-    "# generate ngrams = 2,2 or 2,3 with Count Vectorizer\n",
-    "count_vectorizer = CountVectorizer(max_df=0.8, min_df=0.02, stop_words=stop_words, ngram_range=(2,2))\n",
-    "X = count_vectorizer.fit_transform(text)\n",
+    "# Using CountVectorizer to generate ngrams\n",
+    "# generate ngrams for 2,2\n",
+    "cv_ngram = CountVectorizer(max_df=0.8, min_df=0.02, stop_words=stop_words, ngram_range=(2,2))\n",
+    "X_count = cv_ngram.fit_transform(df_text)\n",
     "\n",
-    "# use TfIdf to determine freq\n",
-    "tfidf = TfidfTransformer(smooth_idf=True, use_idf=True)\n",
-    "X = tfidf.fit_transform(X).toarray()\n",
+    "# TfIdf transform to determine freqency\n",
+    "# add smoothing to avoid zero\n",
+    "tfTransform = TfidfTransformer(smooth_idf=True, use_idf=True)\n",
+    "X_count = tfTransform.fit_transform(X_count).toarray()\n",
     "\n",
-    "# use PCA to generate final text dataset\n",
-    "pca = PCA(n_components=3)\n",
-    "finalXtrain = pca.fit_transform(X)\n",
+    "# pca dataset for ngrams and sentiment\n",
+    "pca_data = PCA(n_components=3)\n",
+    "lastXTraining = pca_data.fit_transform(X_count)\n",
     "\n",
-    "# create train and test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(finalXtrain, labels, test_size=0.3, random_state=23)\n",
+    "# train and test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(lastXTraining, df_label_score, test_size=0.3, random_state=23)\n",
     "\n",
-    "# scale the data\n",
-    "minmaxScaler = preprocessing.MinMaxScaler()\n",
-    "scaled_x_train = minmaxScaler.fit_transform(X_train)\n",
-    "scaled_x_test = minmaxScaler.fit_transform(X_test)"
+    "# minMax scale the data\n",
+    "minMaxPreprocess = preprocessing.MinMaxScaler()\n",
+    "min_max_x_train = minMaxPreprocess.fit_transform(X_train)\n",
+    "min_max_x_test = minMaxPreprocess.fit_transform(X_test)"
    ]
   },
   {
@@ -423,29 +450,29 @@
     }
    ],
    "source": [
-    "# evaluation for ngrams\n",
+    "# evaluation\n",
     "\n",
-    "# create and train LR model\n",
-    "lr_model = LogisticRegression(random_state=10)\n",
-    "lr_model.fit(scaled_x_train,y_train)\n",
+    "# logistic regression model\n",
+    "logistic_regression_model = LogisticRegression(random_state=10)\n",
+    "logistic_regression_model.fit(min_max_x_train,y_train)\n",
     "\n",
-    "# generate prediction\n",
-    "y_train_pred = lr_model.predict(scaled_x_train)\n",
-    "y_test_pred = lr_model.predict(scaled_x_test)\n",
+    "# train and test prediction\n",
+    "Y_train_prediction = logistic_regression_model.predict(min_max_x_train)\n",
+    "Y_test_prediction = logistic_regression_model.predict(min_max_x_test)\n",
     "\n",
-    "# display train and test accuracy\n",
-    "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "print('Training accuracy is {0}'.format(train_accuracy))\n",
-    "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "print('Testing accuracy is {0}'.format(test_accuracy))\n",
+    "# print train and test accuracy\n",
+    "trainingAccuracy_Score = accuracy_score(y_train, Y_train_prediction)\n",
+    "print('Accuracy on training data is: {0}'.format(trainingAccuracy_Score))\n",
+    "testAccuracy_Score = accuracy_score(y_test, Y_test_prediction)\n",
+    "print('Accuracy on test data is: {0}'.format(testAccuracy_Score))\n",
     "\n",
-    "# display f-1 score\n",
-    "f1score = f1_score(y_test, y_test_pred)\n",
-    "print('F1 score is {0}'.format(f1score))\n",
+    "#print f-1 score\n",
+    "f1_score_pred = f1_score(y_test, Y_test_prediction)\n",
+    "print('Score for f-1 score: {0}'.format(f1_score_pred))\n",
     "\n",
-    "# display classification report\n",
-    "report = classification_report(y_test, y_test_pred)\n",
-    "print('Classifcation report: {0}'.format(report))"
+    "#print classification report\n",
+    "classify_report = classification_report(y_test, Y_test_prediction)\n",
+    "print('Report for classification: {0}'.format(classify_report))"
    ]
   },
   {
@@ -467,7 +494,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
