Sushrut's Changes in the 3 files chunking of code and Bert of eval

--- a/EVALUATIONS/BERT_sentence_Evaluation.ipynb
+++ b/EVALUATIONS/BERT_sentence_Evaluation.ipynb
@@ -1,28 +1,30 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "BERT_sentence_Evaluation.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "Oc4Gw4fT9sjI",
-        "colab_type": "code",
-        "outputId": "1d285d14-1ad0-4d9a-c0fb-64fef3cfb1fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "colab_type": "code",
+        "id": "Oc4Gw4fT9sjI",
+        "outputId": "1d285d14-1ad0-4d9a-c0fb-64fef3cfb1fb"
       },
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'google.colab'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m drive\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#import ktrain\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#from ktrain import text\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.colab'"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import numpy as np\n",
@@ -46,69 +48,40 @@
         "from tensorflow.python.keras.callbacks import ModelCheckpoint\n",
         "from tensorflow.python.keras.optimizers import SGD, Adam, RMSprop\n",
         "from tensorflow.python.keras import regularizers\n",
+        "\n",
+        "from sklearn.metrics import confusion_matrix, precision_score, recall_score, roc_auc_score\n",
+        "\n",
         "import string\n",
         "nltk.download('punkt')\n",
         "nltk.download('stopwords')\n",
         "nltk.download('wordnet')"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ekjgxoLe9wga",
-        "colab_type": "code",
-        "outputId": "9b7d362b-a0c2-41a2-d678-2ab3ae742d07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 258
-        }
+        },
+        "colab_type": "code",
+        "id": "ekjgxoLe9wga",
+        "outputId": "9b7d362b-a0c2-41a2-d678-2ab3ae742d07"
       },
-      "source": [
-        "drive.mount('/content/drive/')\n",
-        "print(os.listdir('./'))\n",
-        "os.chdir('drive/My Drive/SWM-stock-prediction/code')"
-      ],
-      "execution_count": 12,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n",
             "['.ipynb_checkpoints', 'articlescraper.py', 'metadata.csv', 'news_join.ipynb', 'preprocess.ipynb', 'stockdata', 'tweetdata', 'unzip_data.py', 'model_bertBCE.h5', 'model_bert.ckpt.data-00001-of-00002', 'model_bert.ckpt.data-00000-of-00002', 'model_bert.ckpt.index', 'checkpoint', 'bert_Sentence_training.png']\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
-          "output_type": "error",
           "ename": "FileNotFoundError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
@@ -116,48 +89,54 @@
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'drive/My Drive/SWM-stock-prediction/code'"
           ]
         }
+      ],
+      "source": [
+        "drive.mount('/content/drive/')\n",
+        "print(os.listdir('./'))\n",
+        "os.chdir('drive/My Drive/SWM-stock-prediction/code')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "tNYR0Hu3V8tw",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "tNYR0Hu3V8tw"
       },
+      "outputs": [],
       "source": [
-        "def split_document_to_chunks(row, field_name, chunk_len):\n",
-        "    text = row[field_name]\n",
-        "    if(text!='[]'):\n",
+        "def split_document_to_chunks(row, fName, chunkLength):\n",
+        "    chunkText = row[fName]\n",
+        "    if(chunkText!='[]'):\n",
         "        label = row['label']\n",
-        "        sentences = sent_tokenize(text)\n",
-        "        output = []\n",
-        "        for i in range(0,len(sentences), chunk_len):\n",
-        "            if(i+chunk_len < len(sentences)):\n",
-        "                chunk = ''.join(sentences[i:i+chunk_len])\n",
+        "        lines = sent_tokenize(chunkText)\n",
+        "        result = []\n",
+        "        for i in range(0,len(lines), chunkLength):\n",
+        "            if(i+chunkLength < len(lines)):\n",
+        "                chunk = ''.join(lines[i:i+chunkLength])\n",
         "            else:\n",
-        "                chunk = ''.join(sentences[i:len(sentences)])\n",
-        "            output.append((chunk,label))\n",
-        "        return output\n",
-        "def prepare_data_set(data_set):\n",
-        "    chunked_text_labels = data_set.apply(split_document_to_chunks, args=('filteredtext_amzn', 3), axis=1)\n",
+        "                chunk = ''.join(lines[i:len(lines)])\n",
+        "            result.append((chunk,label))\n",
+        "        return result\n",
+        "    \n",
+        "def prepare_data_set(dataSet):\n",
+        "    chunkTxtLabel = dataSet.apply(split_document_to_chunks, args=('filteredtext_amzn', 3), axis=1)\n",
         "    X=[]\n",
         "    y=[]\n",
-        "    for chunks in chunked_text_labels:\n",
-        "        if(chunks is not None):\n",
-        "            for chunk in chunks:\n",
+        "    for c in chunkTxtLabel:\n",
+        "        if(c is not None):\n",
+        "            for chunk in c:\n",
         "                X.append(chunk[0])\n",
         "                y.append(chunk[1])\n",
         "    return X,y"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mXWEaWg4QthH",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "mXWEaWg4QthH"
       },
       "source": [
         "**Loading the dataset**"
@@ -165,25 +144,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WbZIXICnLzJC",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "WbZIXICnLzJC"
       },
+      "outputs": [],
       "source": [
-        "X_train = np.load('../Data/X_train_bert.npy')\n",
-        "X_test = np.load('../Data/X_test_bert.npy')\n",
-        "train_label = np.load('../Data/label_train_bert.npy')\n",
-        "test_label = np.load('../Data/label_test_bert.npy')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "XTrain = np.load('../Data/X_train_bert.npy')\n",
+        "XTest = np.load('../Data/X_test_bert.npy')\n",
+        "trainLabels = np.load('../Data/label_train_bert.npy')\n",
+        "testLabels = np.load('../Data/label_test_bert.npy')"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IBjAvHv2RUX4",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "IBjAvHv2RUX4"
       },
       "source": [
         "**Train and test shapes**"
@@ -191,36 +170,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "KH3bO1exRZfd",
-        "colab_type": "code",
-        "outputId": "b5483a9d-7c60-4045-c611-8809ec0a0fdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "colab_type": "code",
+        "id": "KH3bO1exRZfd",
+        "outputId": "b5483a9d-7c60-4045-c611-8809ec0a0fdb"
       },
-      "source": [
-        "print(X_train.shape)\n",
-        "print(X_test.shape)"
-      ],
-      "execution_count": 15,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "(59278, 768)\n",
             "(13349, 768)\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "print(XTrain.shape)\n",
+        "print(XTest.shape)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "46X51Fd4Q0Wj",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "46X51Fd4Q0Wj"
       },
       "source": [
         "**Loading the trained BERT Sentence embedding + DNN Model**"
@@ -228,22 +207,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "dsr9MqhZQlWs",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "dsr9MqhZQlWs"
       },
+      "outputs": [],
       "source": [
         "model = load_model('../Data/bert_sentence_NN.h5')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "G2orhYOORHpY",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "G2orhYOORHpY"
       },
       "source": [
         "**DNN Architecture**"
@@ -251,21 +230,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "W16ENr_MRGgD",
-        "colab_type": "code",
-        "outputId": "523e957e-b414-45cf-c4d7-cbdc3c4d5a2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "colab_type": "code",
+        "id": "W16ENr_MRGgD",
+        "outputId": "523e957e-b414-45cf-c4d7-cbdc3c4d5a2e"
       },
-      "source": [
-        "model.summary()"
-      ],
-      "execution_count": 17,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Model: \"sequential_8\"\n",
@@ -282,82 +259,65 @@
             "Trainable params: 591,361\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "model.summary()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "8YM2Fp2ARN9w",
-        "colab_type": "code",
-        "outputId": "873c4307-4394-4b11-dc45-d9a481e669fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "colab_type": "code",
+        "id": "8YM2Fp2ARN9w",
+        "outputId": "873c4307-4394-4b11-dc45-d9a481e669fe"
       },
-      "source": [
-        "model.evaluate(X_test, test_label)"
-      ],
-      "execution_count": 0,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "418/418 [==============================] - 1s 2ms/step - loss: 0.6531 - accuracy: 0.6383\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[0.6531215310096741, 0.6383249759674072]"
             ]
           },
+          "execution_count": 10,
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model.evaluate(XTest, testLabels)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Ra1UISrdRl5G",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.metrics import confusion_matrix, precision_score, recall_score, roc_auc_score"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "K2LVR8s3jV6w",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
+        "colab_type": "code",
+        "id": "K2LVR8s3jV6w",
         "outputId": "69fb2557-2967-4b06-ee90-d032541ec167"
       },
-      "source": [
-        "ypred = model.predict_classes(X_test)\n",
-        "print(confusion_matrix(test_label, ypred))\n",
-        "print(precision_score(test_label, ypred))\n",
-        "print(recall_score(test_label, ypred))\n",
-        "print(roc_auc_score(test_label, ypred))\n"
-      ],
-      "execution_count": 20,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:From <ipython-input-20-4c6eceff93e4>:1: Sequential.predict_classes (from tensorflow.python.keras.engine.sequential) is deprecated and will be removed after 2021-01-01.\n",
@@ -368,23 +328,51 @@
             "0.6173203992689442\n",
             "0.675850392488841\n",
             "0.6392970584744264\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "ypred = model.predict_classes(XTest)\n",
+        "print(confusion_matrix(testLabels, ypred))\n",
+        "print(precision_score(testLabels, ypred))\n",
+        "print(recall_score(testLabels, ypred))\n",
+        "print(roc_auc_score(testLabels, ypred))\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ofR5qDhekegw",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "ofR5qDhekegw"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "BERT_sentence_Evaluation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
