--- a/code/Chunking.ipynb
+++ b/code/Chunking.ipynb
@@ -2,44 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokenize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sent_tokenize\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m fetch_20newsgroups\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_20newsgroups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_document_to_chunks(row, field_name, chunk_len):\n",
-    "    text = row[field_name]\n",
-    "    if(text!='[]'):\n",
+    "def split_document_to_chunks(row, fName, chunkLength):\n",
+    "    chunkText = row[fName]\n",
+    "    if(chunkText!='[]'):\n",
     "        label = row['label']\n",
-    "        sentences = sent_tokenize(text)\n",
-    "        output = []\n",
-    "        for i in range(0,len(sentences), chunk_len):\n",
-    "            if(i+chunk_len < len(sentences)):\n",
-    "                chunk = ''.join(sentences[i:i+chunk_len])\n",
+    "        lines = sent_tokenize(chunkText)\n",
+    "        result = []\n",
+    "        for i in range(0,len(lines), chunkLength):\n",
+    "            if(i+chunkLength < len(lines)):\n",
+    "                chunk = ''.join(lines[i:i+chunkLength])\n",
     "            else:\n",
-    "                chunk = ''.join(sentences[i:len(sentences)])\n",
-    "            output.append((chunk,label))\n",
-    "        return output\n",
-    "def prepare_data_set(data_set):\n",
-    "    chunked_text_labels = data_set.apply(split_document_to_chunks, args=('filteredtext_aapl', 1), axis=1)\n",
+    "                chunk = ''.join(lines[i:len(lines)])\n",
+    "            result.append((chunk,label))\n",
+    "        return result\n",
+    "def prepare_data_set(dataSet):\n",
+    "    chunkTxtLabel = dataSet.apply(split_document_to_chunks, args=('filteredtext_aapl', 1), axis=1)\n",
     "    X=[]\n",
     "    y=[]\n",
-    "    for chunks in chunked_text_labels:\n",
-    "        if(chunks is not None):\n",
-    "            for chunk in chunks:\n",
+    "    for c in chunkTxtLabel:\n",
+    "        if(c is not None):\n",
+    "            for chunk in c:\n",
     "                X.append(chunk[0])\n",
     "                y.append(chunk[1])\n",
     "    return X,y"
@@ -47,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_set = pd.read_csv('../Data/final_dataset_joined_aapl240_onlyMentions.csv')\n",
-    "train_df = data_set[data_set.stock_time <= \"2018-12-01 00:00:00\"]\n",
-    "test_df = data_set[data_set.stock_time > \"2018-12-01 00:00:00\"]"
+    "dataSet = pd.read_csv('../Data/final_dataset_joined_aapl240_onlyMentions.csv')\n",
+    "trainDF = dataSet[dataSet.stock_time <= \"2018-12-01 00:00:00\"]\n",
+    "testDF = dataSet[dataSet.stock_time > \"2018-12-01 00:00:00\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -75,13 +88,13 @@
     }
    ],
    "source": [
-    "X_train,y_train = prepare_data_set(train_df)\n",
-    "len(X_train),len(y_train)"
+    "XTrain,yTrain = prepare_data_set(trainDF)\n",
+    "len(XTrain),len(yTrain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,12 +120,12 @@
     }
    ],
    "source": [
-    "train_df.filteredtext_aapl.apply(lambda x: (sent_tokenize(x)))"
+    "trainDF.filteredtext_aapl.apply(lambda x: (sent_tokenize(x)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,18 +138,18 @@
     }
    ],
    "source": [
-    "categories = ['alt.atheism', 'soc.religion.christian',\n",
+    "options = ['alt.atheism', 'soc.religion.christian',\n",
     "             'comp.graphics', 'sci.med']\n",
-    "from sklearn.datasets import fetch_20newsgroups\n",
-    "train_b = fetch_20newsgroups(subset='train',\n",
-    "   categories=categories, shuffle=True, random_state=42)\n",
-    "test_b = fetch_20newsgroups(subset='test',\n",
-    "   categories=categories, shuffle=True, random_state=42)"
+    "\n",
+    "trainB = fetch_20newsgroups(subset='train',\n",
+    "   categories=options, shuffle=True, random_state=42)\n",
+    "testB = fetch_20newsgroups(subset='test',\n",
+    "   categories=options, shuffle=True, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -151,12 +164,12 @@
     }
    ],
    "source": [
-    "train_b.target_names"
+    "trainB.target_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +184,7 @@
     }
    ],
    "source": [
-    "(train_b.target)"
+    "(trainB.target)"
    ]
   },
   {
@@ -198,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
